# trace_opencv

./: .gitmodules  README.md  modules_list.txt
color_matrix/: CMakeLists.txt  color_matrix.cpp  color_matrix.h
color_matrix/color_matrix_test/: CMakeLists.txt  color_matrix_test.cpp
images/: README.md
smart_tree/: README.md  smart_tree.h
